--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Inicio de Sesión</title>
+    <title>Inicio de Sesi&oacute;n</title>
 </head>
 <body>
 <form th:action="@{/login}" th:object="${usuario}" method="post">
