--- a/src/main/resources/templates/editarExpediente.html
+++ b/src/main/resources/templates/editarExpediente.html
@@ -7,6 +7,7 @@
 <body>
 <form th:action="@{/guardarAlumno}" th:object="${alumno}" method="post">
     <h1>Editar Expediente</h1>
+    <input type="hidden" th:field="*{codigoEstudiante}">
     <label>Nombres:</label>
     <input type="text" th:field="*{nombres}">
     <span th:errors="*{nombres}" style="color: red"></span><br>
