--- a/src/main/resources/templates/busquedaAlumno.html
+++ b/src/main/resources/templates/busquedaAlumno.html
@@ -24,6 +24,7 @@
 <form th:action="@{/agregarExpediente}">
     <input type="submit" value="Agregar Nuevo Expediente">
 </form>
+<h3 th:text="${mensaje}"/>
 
 </body>
 </html>
