--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,9 @@
     <label>Nombre de usuario:</label>
     <input type="text" th:field="*{nombreUsuario}">
     <span th:errors="*{nombreUsuario}" style="color: red"></span><br>
+    <div th:if="${param.error}">
+        Invalid username and password.
+    </div>
     <br>
     <label>Contrase&ntilde;a:</label>
     <input type="password" th:field="*{contrasenia}">
