Materias Cursdas: still having problems on listMateria.html

--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -33,7 +33,7 @@
     </th:block>
 </table>
 
-<form th:action="@{/insertarMateria}" method="get">
+<form th:action="@{/insertarMateria}">
     <input type="submit" value="Guardar Materia">
 </form>
 
