--- a/src/main/resources/templates/guardarMateria.html
+++ b/src/main/resources/templates/guardarMateria.html
@@ -6,28 +6,30 @@
 </head>
 <body>
 
-<form th:action="@{/insertarMateria}" th:object="${alumnoM}" method="post">
-    <label>Nombre de Materia:</label>
-    <select th:field="*{materia.codMateria}">
-        <option th:each="mat: ${materia}"
-                th:value="${mat.codMateria}"
-                th:text="${mat.nomMateria}"></option>
-    </select>
-    <span th:errors="*{codMateria}"  style="color: #FF0000"/><br>
+<form th:action="@{/guardarM}" th:object="${AlumnoMateria}" method="post">
 
-    <label>Año:</label><input type="number" th:field="*{year}" th:if="{year<= 2005}">
-    <span th:errors="*{year}"  style="color: #FF0000"/><br>
-    <label>Ciclo:</label>
-    <select th:field="*{materia.codMateria}">
-        <option th:each="mat: ${materia}"
-                th:value="${mat.codMateria}"
-                th:text="${mat.cicle}"></option>
-    </select>
-    <span th:errors="*{codMateria}"  style="color: #FF0000"/><br>
+   <label>Alumno:</label>
+    <th th:text="${alumno.nombre}"></th>
+    <input th:field="${AlumnoMateria.alumno}" type="hidden" value="${alumno.nombre}">
 
-    <label>Nota:</label><input type="number" th:field="*{materiaList.nota}">
-    <span th:errors="*{materiaList.nota}"  style="color: #FF0000"/><br>
+    <select th:field="${AlumnoMateria.materia}">
+        <option th:each="p : ${materias}"
+                th:value="${p.codMateria}"
+                th:text="${p.nomMateria}"></option>
+    </select>
+
+    <label>Año:</label><input type="number" th:field="*{AlumnoMateria.materia.year}">
+    <span th:errors="*{AlumnoMateria.materia.year}"  style="color: #FF0000"/><br>
+
+    <label>Ciclo:</label><input type="number" th:field="*{AlumnoMateria.materia.cicle}">
+    <span th:errors="*{AlumnoMateria.materia.cicle}"  style="color: #FF0000"/><br>
+    <label>Nota:</label><input type="number" th:field="*{AlumnoMateria.materia.nota}">
+    <span th:errors="*{AlumnoMateria.materia.nota}"  style="color: #FF0000"/><br>
     <input type="submit" value="Save"/><br>
+
+
+
+</form>
 
 </form>
 </body>
