--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<!--<label>Alumno:</label>
+<th th:text="${alumno.nombre}"></th>
+<input th:field="${AlumnoMateria.alumno}" type="hidden" value="${alumno.nombre}">-->
 <table>
     <thead>
     <th>Acción</th>
