autenticacion con spring security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,25 +5,27 @@
     <title>Inicio de Sesi&oacute;n</title>
 </head>
 <body>
-<form th:action="@{/login}" th:object="${usuario}" method="post">
-    <h1>Iniciar Sesi&oacute;n</h1>
-    <label>Nombre de usuario:</label>
-    <input type="text" th:field="*{nombreUsuario}">
-    <span th:errors="*{nombreUsuario}" style="color: red"></span><br>
     <div th:if="${param.error}">
         Invalid username and password.
     </div>
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
+    <form th:action="@{/login}" method="post">
+        <h1>Iniciar Sesi&oacute;n</h1>
+        <div>
+            <label>Nombre de usuario:</label>
+            <input type="text" name="username">
+        </div>
+        <br>
+        <div>
+            <label>Contrase&ntilde;a:</label>
+            <input type="password" name="password">
+        </div>
+        <br>
+        <input type="submit" value="Iniciar Sesi&oacute;n">
+    </form>
     <br>
-    <label>Contrase&ntilde;a:</label>
-    <input type="password" th:field="*{contrasenia}">
-    <span th:errors="*{contrasenia}" style="color: red"></span><br>
-    <br>
-    <input type="submit" value="Iniciar Sesi&oacute;n">
-</form>
-<br>
-<form th:action="@{/registro}">
-    <input type="submit" value="Registrarse">
-</form>
-
+    <a href="/registro"> Registro </a>
 </body>
 </html>
