--- a/src/main/resources/templates/guardarMateria.html
+++ b/src/main/resources/templates/guardarMateria.html
@@ -11,20 +11,20 @@
 
 <form th:action="@{/guardarM}" th:object="${materia}" method="post">
 
-    <select th:field="${catalogoMateria.codigoCatalogo}">
+    <select th:field="*{catalogoMateria.codigoCatalogo}">
         <option th:each="p : ${cat}"
                 th:value="${p.codigoCatalogo}"
                 th:text="${p.nomMateria}"></option>
     </select>
-    <span th:errors="*{materia.year}"  style="color: #FF0000"/><br>
+    <span th:errors="*{catalogoMateria}"  style="color: #FF0000"></span><br>
 
     <label>Año:</label><input type="number" th:field="*{year}">
-    <span th:errors="*{year}"  style="color: #FF0000"/><br>
+    <span th:errors="*{year}"  style="color: #FF0000"></span><br>
 
     <label>Ciclo:</label><input type="number" th:field="*{cicle}">
-    <span th:errors="*{cicle}"  style="color: #FF0000"/><br>
-    <label>Nota:</label><input type="number" th:field="*{materia.nota}">
-    <span th:errors="*{nota}"  style="color: #FF0000"/><br>
+    <span th:errors="*{cicle}"  style="color: #FF0000"></span><br>
+    <label>Nota:</label><input type="number" th:field="*{notaMateria}">
+    <span th:errors="*{notaMateria}"  style="color: #FF0000"></span><br>
     <input type="submit" value="Save"/><br>
 
 
