agregando estilo a las vistas

--- a/src/main/resources/templates/busquedaAlumno.html
+++ b/src/main/resources/templates/busquedaAlumno.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Busqueda de expediente</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 <form th:action="@{/buscar}" th:object="${alumno}" method="post">
@@ -24,7 +29,7 @@
 <form th:action="@{/agregarExpediente}">
     <input type="submit" value="Agregar Nuevo Expediente">
 </form>
-<h3 th:text="${mensaje}"/>
+<h3 th:text="${mensaje}"></h3>
 
 </body>
 </html>
