Materias Cursadas: controller guardarMateria still failing but almost working

--- a/src/main/resources/templates/editarMateria.html
+++ b/src/main/resources/templates/editarMateria.html
@@ -28,6 +28,6 @@
     <span th:errors="*{notaMateria}"  style="color: #FF0000"></span><br>
 
     <input type="submit" value="Save"/><br>
-
+</form>
 </body>
 </html>
